# deep-session

./: .gitignore  README.md  compose.yaml
deep_session_backend/: alembic.ini  pyproject.toml  run.py
deep_session_backend/src/: main.py  router.py
deep_session_backend/src/db/: session.py
deep_session_backend/src/migrations/versions/: 22f8a69b2349_task.py  483fce5a72b9_time_stats.py
deep_session_backend/src/task/: enum.py  filters.py  models.py  router.py  schemas.py  service.py
deep_session_frontend/: README.md  package-lock.json  package.json
deep_session_frontend/src/: App.vue
deep_session_frontend/src/components/: CurrentTaskContainer.vue  TaskForm.vue  TaskList.vue
