[tool.poetry]
name = "deepsession"
version = "0.1.0"
description = ""
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.4"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.31"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
